--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,15 +1,14 @@
 <div class="ma-box">
   <div class="ma-box__title">Log in</div>
   <div class="ma-box__content">
-
     <form (ngSubmit)="onLogInSubmit()" #loginForm="ngForm" class="form-horizontal ma-form--horizontal">
       <div class="form-group">
         <label class="text-right col-xs-3" for="username">Email</label>
         <div class="col-xs-9">
           <input id="username" type="text" class="ma-input ma-input--default" required
-                 [(ngModel)]="loginInfo.username" name="username"
+                 [(ngModel)]="loginInfo.email" name="username"
           >
-          debug: {{ loginInfo.username }}
+          debug: {{ loginInfo.email }}
         </div>
       </div>
       <br>
