basic signup+activate works, can talk to backend

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -8,7 +8,7 @@
           <input id="username" type="text" class="ma-input ma-input--default" required
                  [(ngModel)]="loginInfo.email" name="username"
           >
-          debug: {{ loginInfo.email }}
+<!--          debug: {{ loginInfo.email }}-->
         </div>
       </div>
       <br>
@@ -18,7 +18,7 @@
           <input id="password" type="password" class="ma-input ma-input--default" required
                  [(ngModel)]="loginInfo.password" name="password"
           >
-          debug: {{ loginInfo.password }}
+<!--          debug: {{ loginInfo.password }}-->
         </div>
       </div>
 
