--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,36 +1,23 @@
 <app-top-navigation></app-top-navigation>
-<div class="ma-box">
-  <h2 class="active">Log in</h2>
-  <div class="ma-box__content">
-    <form (ngSubmit)="onLogInSubmit()" #loginForm="ngForm" class="form-horizontal ma-form--horizontal">
+<br>
+<div style="margin-right: 37%;margin-left: 37%" class="vbf">
+  <h2 class="form_title"><i class="fa fa-calendar"></i>LOG IN PROFILE</h2>
+    <form (ngSubmit)="onLogInSubmit()" #loginForm="ngForm" class="inner">
       <div class="form-group">
-        <label class="text-right col-xs-3" for="username">Email</label>
-        <div class="col-xs-9">
-          <input id="username" type="text" class="ma-input ma-input--default" required
-                 [(ngModel)]="loginInfo.email" name="username"
+          <input class="form-control" id="username" type="text" required
+                 [(ngModel)]="loginInfo.username" name="username" placeholder="Enter your username(email)"
           >
-<!--          debug: {{ loginInfo.email }}-->
+      </div>
+      <div class="form-group">
+        <div class="form-group">
+          <input id="password" type="password" class="form-control" required
+                 [(ngModel)]="loginInfo.password" name="password" placeholder="Enter your password"
+          >
         </div>
       </div>
-      <br>
-      <div class="form-group">
-        <label class="text-right col-xs-3" for="password">Password</label>
-        <div class="col-xs-9">
-          <input id="password" type="password" class="ma-input ma-input--default" required
-                 [(ngModel)]="loginInfo.password" name="password"
-          >
-<!--          debug: {{ loginInfo.password }}-->
-        </div>
-      </div>
-
-      <div class="buttons">
-        <button type="submit" [disabled]="!loginForm.form.valid" class="ma-btn ma-btn--large ma-btn--primary" style="width: 100%">Log in</button>
-      </div>
-
-      <div class="buttons">
-        <button (click)="loginForm.reset()" class="ma-btn ma-btn--large ma-btn--primary" style="width: 100%">Reset</button>
-      </div>
+      <button class="button btn_lg btn_blue btn_full" type="submit" [disabled]="!loginForm.form.valid">LOG IN</button>
+      <button class="button btn_lg btn_blue btn_full" (click)="loginForm.reset()">RESET ALL</button>
+      <p>Don't have an account? You can create a new account <a href="/signup">here</a>.</p>
     </form>
-
   </div>
-</div>
+
