add profile, fix functionalities

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -17,29 +17,19 @@
       <ul class="nav navbar-nav">
         <li class="mobile_menu_title" style="display:none;">MENU</li>
         <li class="dropdown simple_menu active">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">HOME <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Become a host<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="index.html">Home Version 1</a></li>
-            <li><a href="index2.html">Home Version 2</a></li>
-            <li><a href="index3.html">Home Version 3</a></li>
-            <li><a href="index4.html">Home Version 4</a></li>
-            <li><a href="boxed.html">Boxed Layout</a></li>
+            <li><a href="index4.html">Individual</a></li>
+            <li><a href="boxed.html">Enterprise</a></li>
           </ul>
         </li>
-        <li class="dropdown simple_menu">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">ROOMS <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="rooms-list.html">Rooms List View</a></li>
-            <li><a href="rooms-grid.html">Rooms Grid View</a></li>
-            <li><a href="rooms-block.html">Rooms Block View</a></li>
-            <li><a href="room.html">Room Details 1</a></li>
-            <li><a href="room2.html">Room Details 2</a></li>
-          </ul>
+        <li>
+          <a href="#">Itinerary planner</a>
         </li>
         <li><a href="/login">Log in</a></li>
         <li><a href="/signup">Sign up</a></li>
         <li class="menu_button">
-          <a href="booking-form.html" class="button  btn_yellow"><i class="fa fa-calendar"></i>BOOK ONLINE</a>
+          <a href="booking-form.html" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
         </li>
       </ul>
     </nav>
