add chatbot simple ui

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -29,7 +29,7 @@
         <li><a href="/login">Log in</a></li>
         <li><a href="/signup">Sign up</a></li>
         <li class="menu_button">
-          <a href="booking-form.html" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
+          <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
         </li>
       </ul>
     </nav>
