--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,72 +1,44 @@
 <app-top-navigation></app-top-navigation>
-<div class="ma-box">
-  <h2 class="active">Sign up</h2>
+<div style="margin-left: 20%;margin-right: 20%" class="vbf">
+  <h2 class="form_title"><i class="fa fa-calendar"></i>SIGN UP FORM</h2>
   <div class="ma-box__content">
-    <form (ngSubmit)="onSignUpSubmit()" #signupForm="ngForm" class="form-horizontal ma-form--horizontal">
+    <form (ngSubmit)="onSignUpSubmit()" #signupForm="ngForm" class="inner">
       <div class="form-group">
-        <label class="text-right col-xs-3" for="firstname">First Name</label>
-        <div class="col-xs-9">
-          <input id="firstname" type="text" class="ma-input ma-input--default" required
+          <input id="firstname" type="text" class="form-control" required
                  [(ngModel)]="this.signUpInfo.first_name" name="firstname"
+                 placeholder="Enter your first name"
           >
-<!--          debug: {{ this.signUpInfo.first_name }}-->
-        </div>
       </div>
-      <br>
       <div class="form-group">
-        <label class="text-right col-xs-3" for="lastname">Last Name</label>
-        <div class="col-xs-9">
-          <input id="lastname" type="text" class="ma-input ma-input--default" required
+          <input id="lastname" type="text" class="form-control" required
                  [(ngModel)]="this.signUpInfo.last_name" name="lastname"
+                 placeholder="Enter your last name"
           >
-<!--          debug: {{ this.signUpInfo.last_name }}-->
-        </div>
       </div>
-
-      <br>
       <div class="form-group">
-        <label class="text-right col-xs-3" for="email">Email</label>
-        <div class="col-xs-9">
-          <input id="email" type="email" class="ma-input ma-input--default" required
+          <input id="email" type="email" class="form-control" required
                  [(ngModel)]="signUpInfo.username" name="email"
+                 placeholder="Enter your email as username"
           >
-<!--          debug: {{ this.signUpInfo.username }}-->
         </div>
-      </div>
-
-      <br>
       <div class="form-group">
-        <label class="text-right col-xs-3" for="birthday">Date Of Birth</label>
-        <div class="col-xs-9">
-          <input id="birthday" type="date" class="ma-input ma-input--default" required
+          <input id="birthday" type="date" class="form-control" required
                  [(ngModel)]="signUpInfo.birthday" name="birthday"
+                 placeholder="Enter your birthday"
           >
-<!--          debug: {{ this.signUpInfo.birthday }}-->
-        </div>
       </div>
-      <br>
       <div class="form-group">
-        <label class="text-right col-xs-3" for="password">Password</label>
-        <div class="col-xs-9">
-          <input id="password" type="password" class="ma-input ma-input--default" required
+          <input id="password" type="password" class="form-control" required
                  [(ngModel)]="signUpInfo.password" name="password"
+                 placeholder="Create a new password"
           >
-          debug: {{ this.signUpInfo.password }}
-        </div>
       </div>
-
-      <br>
       <div class="form-group">
-        <label class="text-right col-xs-3" for="retype">Retype password to confirm</label>
-        <div class="col-xs-9">
-          <input id="retype" type="password" class="ma-input ma-input--default" required
+          <input id="retype" type="password" class="form-control" required
                  [(ngModel)]="this.secondTypedPwd" name="secondpassword"
+                 placeholder="Retype your password"
           >
-          debug: {{ this.secondTypedPwd }}
-        </div>
       </div>
-
-      <br>
       <div class="form-group">
         <label class="text-right col-xs-3">User type</label>
         <div class="ma-select-container ma-select-container--default ma-select-container--block">
@@ -79,7 +51,7 @@
         </div>
       </div>
       <br>
-      <button [disabled]="!signupForm.form.valid" class="ma-btn ma-btn--large ma-btn--primary">Sign up</button>
+      <button class="button btn_lg btn_blue btn_full" type="submit" [disabled]="!signupForm.form.valid">CREATE A NEW ACCOUNT</button>
     </form>
   </div>
 </div>
