--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -51,7 +51,7 @@
         data-title="Slide"
         data-description="">
       <!-- IMAGE -->
-      <img src="./../../assets/images/slider/hero.jpg" alt="Image" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+      <img src="../../assets/images/slider/hero.jpg" alt="Image" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
       <!-- LAYER NR. 1 -->
       <div class="tp-caption"
            data-x="['left','left','left','center']"
