--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -171,16 +171,10 @@
            style="z-index: 99;">
         <!-- ========== BOOKING FORM ========== -->
         <div class="vbf">
-          <h2 class="form_title"><i class="fa fa-calendar"></i> BOOK ONLINE</h2>
+          <h2 class="form_title"><i class="fa fa-calendar"></i> Search Accommodation</h2>
           <form id="booking-form" class="inner">
             <div class="form-group">
-              <input class="form-control" name="booking-name" placeholder="Enter Your Name" type="text">
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="booking-email" placeholder="Enter Your Email Address" type="email">
-            </div>
-            <div class="form-group">
-              <input class="form-control" name="booking-phone" placeholder="Enter Your Phone Number" type="text">
+              <input class="form-control" name="Destination" placeholder="Enter Your Destination" type="text">
             </div>
             <div class="form-group">
               <div class="form_select">
