--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -24,7 +24,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Itinerary planner</a>
+          <a href="/map">Itinerary planner</a>
         </li>
         <li><a href="/login">Log in</a></li>
         <li><a href="/signup">Sign up</a></li>
