--- a/frontend/src/app/interactive-map/interactive-map.component.css
+++ b/frontend/src/app/interactive-map/interactive-map.component.css
@@ -1,16 +1,16 @@
 /*.fakeBody { margin:0; padding:0; }*/
 /*.map { position:absolute; top:0; bottom:0; width:100%}*/
-.info-box {
-  height: 130px;
-  width: 150px;
-  position: absolute;
-  top: 220px;
-  left: 20px;
-  background-color: rgba(255, 255, 255, .9);
-  padding: 15px;
-  text-align: left;
-  font-family: serif;
-  margin: 0;
-  font-size: 13px;
-  color: #0b0b0b;
-}
+/*.info-box {*/
+/*  height: 130px;*/
+/*  width: 150px;*/
+/*  position: absolute;*/
+/*  top: 220px;*/
+/*  left: 20px;*/
+/*  background-color: rgba(255, 255, 255, .9);*/
+/*  padding: 15px;*/
+/*  text-align: left;*/
+/*  font-family: serif;*/
+/*  margin: 0;*/
+/*  font-size: 13px;*/
+/*  color: #0b0b0b;*/
+/*}*/
