fix the profile page button

--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -18,7 +18,7 @@
                     <img class="layadmin-homepage-pad-img" id="img" name="img">
                     <p id="demoText"></p>
                   </div>
-                  <button style="margin-left: 25%;margin-top: 20%;" type="button" class="layui-btn" id="test1">Upload</button>
+                  <button style="margin-left: 25%;margin-top: 20%;" type="button" class="button" id="test1">Upload</button>
                 </div>
               </div>
               <div class="layui-col-md9">
@@ -73,7 +73,7 @@
                 <!-- Button submit -->
                 <div class="layui-form-item">
                   <div class="layui-input-block">
-                    <button type="button" class="layui-btn" id="submit" lay-submit="">Submit</button>
+                    <button type="button" class="button" id="submit" lay-submit="">Submit</button>
                   </div>
                 </div>
               </div>
