add avator in nav bar and add logout function

--- a/frontend/src/app/top-navigation/top-navigation.component.html
+++ b/frontend/src/app/top-navigation/top-navigation.component.html
@@ -23,7 +23,7 @@
         <li>
           <a href="#">Itinerary planner</a>
         </li>
-        <li><a href="/login">log in</a></li>
+        <li id="loginStatus"><a href="/login">log in</a></li>
         <li><a href="/signup">sign up</a></li>
         <li class="menu_button">
           <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>BOOKING WITH CHATBOT</a>
@@ -32,3 +32,5 @@
     </nav>
   </div>
 </div>
+<app-scripthack src="../../assets/loginStatus.js" type="text/javascript"></app-scripthack>
+
