--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -26,7 +26,7 @@
         <li>
           <a href="/map">Itinerary planner</a>
         </li>
-        <li><a href="/login">Log in</a></li>
+        <li id="loginStatus"><a href="/login">Log in</a></li>
         <li><a href="/signup">Sign up</a></li>
         <li class="menu_button">
           <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
@@ -252,3 +252,4 @@
 
   </ul>
 </div>
+<app-scripthack src="../../assets/loginStatus.js" type="text/javascript"></app-scripthack>
