--- a/frontend/src/app/interactive-map/interactive-map.component.html
+++ b/frontend/src/app/interactive-map/interactive-map.component.html
@@ -1,15 +1,9 @@
-<!--<div class="fakeBody">-->
-<!--  <div #mapElement class="mainMap"></div>-->
-<!--  <div class='info-box'>-->
-<!--    <p>Draw your route using the draw tools (25 points max)</p>-->
-<!--    <div id='calculated-line'></div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<div #mapElement></div>-->
 <app-top-navigation></app-top-navigation>
 <div>
-  <div #mapElement style="margin-left: 300px; height: 500px; width: 900px"></div>
-    <div class='info-box'>
-      <p>Draw your route using the draw tools (25 points max)</p>
-    </div>
+  <div id="mapEle" style="margin-left: 300px; height: 500px; width: 900px"></div>
+  <div class='info-box'>
+    <p>Draw your route using the draw tools (25 points max)</p>
+    <div id='calculated-line'></div>
+  </div>
 </div>
+<app-scripthack src="../../assets/simpleMap.js" type="text/javascript"></app-scripthack>
