fix user image and add hotel info for map API

--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-top-navigation></app-top-navigation>
-<div class="layui-container">
+<div class="layui-container" style="margin-left: 20%">
   <div class="layui-row">
     <div class="layui-col-md9">
       <div class="layui-tab">
@@ -71,9 +71,9 @@
                 </div>
 
                 <!-- Button submit -->
-                <div class="layui-form-item">
+                <div class="layui-form-item" style="margin-left: 25%">
                   <div class="layui-input-block">
-                    <button type="button" class="button" id="submit" lay-submit="">Submit</button>
+                    <button type="button" class="button" id="submit" style="width: 100px" lay-submit="">Update</button>
                   </div>
                 </div>
               </div>
