--- a/frontend/src/app/top-navigation/top-navigation.component.html
+++ b/frontend/src/app/top-navigation/top-navigation.component.html
@@ -24,10 +24,12 @@
           <a href="#">Itinerary planner</a>
         </li>
         <li id="loginStatus"><a href="/login">log in</a></li>
-        <li><a href="/signup">sign up</a></li>
+        <li><a href="/signup" id="singup_status">sign up</a></li>
         <li class="menu_button">
           <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>BOOKING WITH CHATBOT</a>
         </li>
+
+        <li id="other" style="display: none"> </li>
       </ul>
     </nav>
   </div>
