--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -27,10 +27,11 @@
           <a href="/map">Itinerary planner</a>
         </li>
         <li id="loginStatus"><a href="/login">Log in</a></li>
-        <li><a href="/signup">Sign up</a></li>
+        <li><a href="/signup" id="singup_status">Sign up</a></li>
         <li class="menu_button">
           <a href="/chat" class="button  btn_yellow"><i class="fa fa-calendar"></i>Booking with Chatbot</a>
         </li>
+        <li id="other" style="display: none"></li>
       </ul>
     </nav>
   </div>
