--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,8 +9,9 @@
 
 
 .login-img {
+  margin-top: 24%;
   box-shadow: 0 0 0 4px rgba(0,0,0,.1);
   border-radius: 50%;
-  width: 52px;
-  height: 52px;
+  width: 42px;
+  height: 42px;
 }
