save partial work

--- a/frontend/src/app/interactive-map/interactive-map.component.html
+++ b/frontend/src/app/interactive-map/interactive-map.component.html
@@ -1,6 +1,6 @@
 <app-top-navigation></app-top-navigation>
 <div>
-  <div id="mapEle" style="margin-left: 514px; margin-bottom: 13px; height: 500px; width: 700px">
+  <div id="mapEle" style="margin-left: 43%; margin-bottom: 13px; height: 500px; width: 750px">
   </div>
   <div class='info-box'>
     <h4>Draw your route using the draw tools.</h4>
