--- a/frontend/src/app/map-sidebar/map-sidebar.component.html
+++ b/frontend/src/app/map-sidebar/map-sidebar.component.html
@@ -1,26 +1,9 @@
-<div style="overflow: auto; height: 400px">
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
-  <h1>place 1</h1>
-  <h1>place 2</h1>
-  <h1>place 2</h1>
+<div style="overflow: auto; height: 400px; width: 500px">
+  <div class="card bg-light mb-3" style="max-width: 18rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body">
+      <h5 class="card-title">Light card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
 </div>
