--- a/frontend/src/app/chatbot/chatbot.component.html
+++ b/frontend/src/app/chatbot/chatbot.component.html
@@ -45,8 +45,8 @@
         </div>
         <div class="type_msg">
           <div class="input_msg_write">
-            <input type="text" class="write_msg" placeholder="Type a message" />
-            <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            <input type="text" class="write_msg" [(ngModel)]="this.userInput" placeholder="Type a message" />
+            <button class="msg_send_btn" type="button" (click)="onClick()"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
           </div>
         </div>
       </div>
