--- a/frontend/src/app/map-sidebar/map-sidebar.component.css
+++ b/frontend/src/app/map-sidebar/map-sidebar.component.css
@@ -32,3 +32,15 @@
   flex: 1 1 auto;
   padding: 1.25rem;
 }
+
+.card-title {
+  margin-bottom: 0.75rem;
+}
+
+.card-text:last-child {
+  margin-bottom: 0;
+}
+
+.my-3 {
+  margin-bottom: 1rem !important;
+}
