--- a/frontend/src/app/map-sidebar/map-sidebar.component.html
+++ b/frontend/src/app/map-sidebar/map-sidebar.component.html
@@ -1,9 +1,15 @@
 <div style="overflow: auto; height: 400px; width: 500px">
-  <div class="card bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
-    <div class="card-body">
-      <h5 class="card-title">Light card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </div>
+  <ul *ngFor="let defaultHotel of this.defaultHotelsInfo">
+    <li>
+      <div class="card bg-light mb-3" style="margin-bottom: 2px">
+        <div class="card-body">
+          <a href="/homepage"><h5 class="card-title" style="color: black">{{ defaultHotel.name }}
+            &nbsp; <a href="/homepage" class="fa fa-map-marker" aria-hidden="true"></a>
+          </h5></a>
+          <p class="card-text">{{ defaultHotel.location }}</p>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
+
