now markers are on the map

--- a/frontend/src/app/interactive-map/interactive-map.component.html
+++ b/frontend/src/app/interactive-map/interactive-map.component.html
@@ -10,4 +10,4 @@
     <app-map-sidebar></app-map-sidebar>
   </div>
 </div>
-<app-scripthack src="../../assets/simpleMap.js" type="text/javascript"></app-scripthack>
+<app-scripthack src="../../assets/displayMap.js" type="text/javascript"></app-scripthack>
