--- a/frontend/src/app/interactive-map/interactive-map.component.html
+++ b/frontend/src/app/interactive-map/interactive-map.component.html
@@ -3,10 +3,10 @@
   <div id="mapEle" style="margin-left: 43%; margin-bottom: 13px; height: 500px; width: 750px">
   </div>
   <div class='info-box'>
-    <h4>Draw your route using the draw tools.</h4>
-    <br>
-    <div id='calculated-line'></div>
-    <br>
+<!--    <p style="color:orange;font-family: Arial;font-size: 27px">You can draw the route on the map.</p>-->
+<!--    <br>-->
+    <div id='calculated-line' style="color:orange;font-family: Arial;font-size: 27px;margin-bottom: 9px">You can draw the route on the map.</div>
+<!--    <br>-->
     <app-map-sidebar></app-map-sidebar>
   </div>
 </div>
