change the title style

--- a/frontend/src/app/interactive-map/interactive-map.component.html
+++ b/frontend/src/app/interactive-map/interactive-map.component.html
@@ -1,6 +1,6 @@
 <app-top-navigation></app-top-navigation>
 <div>
-  <div id="mapEle" style="margin-left: 43%; margin-bottom: 13px; height: 500px; width: 750px">
+  <div id="mapEle" style="margin-left: 43%; margin-bottom: 13px; height: 500px; width: 750px;border-style: groove">
   </div>
   <div class='info-box'>
 <!--    <p style="color:orange;font-family: Arial;font-size: 27px">You can draw the route on the map.</p>-->
