--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -173,13 +173,15 @@
         <!-- ========== BOOKING FORM ========== -->
         <div class="vbf">
           <h2 class="form_title"><i class="fa fa-calendar"></i> Search Accommodation</h2>
-          <form id="booking-form" class="inner">
+          <form (ngSubmit)="onSearchSubmit()" id="booking-form" class="inner" #searchform="ngForm">
             <div class="form-group">
-              <input class="form-control" name="Destination" placeholder="Enter Your Destination" type="text">
+              <input class="form-control" name="Destination" placeholder="Enter Your Destination" type="text"
+                     [(ngModel)]="this.searchInfo.location">
             </div>
             <div class="form-group">
               <div class="form_select">
-                <select name="booking-roomtype" class="form-control" title="Select Room Type" data-header="Room Type">
+                <select name="booking-roomtype" class="form-control" title="Select Room Type" data-header="Room Type"
+                        [(ngModel)]="this.searchInfo.room_type">
                   <option value="Single Room">Single Room</option>
                   <option value="Double Room">Double Room</option>
                   <option value="Deluxe Room">Deluxe Room</option>
