fix search function

--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -182,9 +182,9 @@
               <div class="form_select">
                 <select name="booking-roomtype" class="form-control" title="Select Room Type" data-header="Room Type"
                         [(ngModel)]="this.searchInfo.room_type">
-                  <option value="Single Room">Single Room</option>
-                  <option value="Double Room">Double Room</option>
-                  <option value="Deluxe Room">Deluxe Room</option>
+                  <option value="Small">Small Room</option>
+                  <option value="Large">Large Room</option>
+                  <option value="Medium">Medium Room</option>
                 </select>
               </div>
             </div>
