add part of functions about add hotel functions not finish yet

--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,5 +1,11 @@
 <app-top-navigation></app-top-navigation>
 <div class="layui-container" style="margin-left: 20%">
+
+  <!-- This part is for add hotel -->
+  <form class="layui-form" action="" style="display: none" id="forms">
+
+  </form>
+
   <div class="layui-row">
     <div class="layui-col-md9">
       <div class="layui-tab">
